--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Telegram Bot Yönetim Paneli</title>
+    <title>GİRİŞ YAP</title>
     <style>
         body {
             background-color: black;
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Telegram Bot Yönetim Paneli</h1>
+        <h1>Giriş Menü</h1>
         <form action="login.php" method="post">
             <label for="username">Kullanıcı Adı:</label>
             <input type="text" id="username" name="username" placeholder="Kullanıcı Ad" required>
